[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/EntityInfo.gd" type="Script" id=1]

[node name="EntityInfo" type="VBoxContainer"]
rect_min_size = Vector2( 0, 25 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="Control" parent="."]

[node name="EntitySprite" type="TextureRect" parent="InfoContainer"]
margin_left = 3.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="InfoContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 145.0
margin_bottom = 15.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 8
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
